--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -141,6 +141,9 @@ hr {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
